--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "php": "^7.1",
     "mongodb/mongodb": "^1",
     "formapro/values": "^0.5.1",
-    "mikemccabe/json-patch-php": "dev-master"
+    "makasim/json-patch-php": "^0.1.2"
   },
   "require-dev": {
     "phpunit/phpunit": "~6.0"
